2007-05-23  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Romano Paolo Tenca)

	* gc_dlopen.c, thread_local_alloc.c, threadlibs.c, win32_threads.c,
	tests/test.c: Accomodate GC_WIN32_PTHREADS.
	* include/gc.h: Don't include windows.h for GC_WIN32_PTHREADS.
	* include/gc_config_macros.h: Define both PTHREADS and
	GC_WIN32_THREADS.
	* include/private/gc_locks.h: Nonstandard definitions of
	NUMERIC_THREAD_ID for GC_WIN32_PTHREADS.
	* doc/README.win32, Makefile.direct: Include documentation
	for GC_WIN32_PTHREADS.
	* Makefile.direct: Remove some anachronisms in the documentation.

2007-05-23  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Move includes to bottom.  Add better library
	dependencies.  Increment library version.  Remove "SUBDIRS += .".
	* cord/cord.am, tests/tests.am: Add better library dependencies.
	Remove now unnecessary dependencies.
	* Makefile.in: Regenerate.
	* include/gc.h (GC_begin_thread_ex, GC_endthreadex, GC_ExitThread):
	Move to define on all Windows platforms.  (_beginthread): define
	to generate error if used.

2007-05-22  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gc_locks.h: Format to 80 columns.

2007-05-22  Hans Boehm <Hans.Boehm@hp.com>
	
	* malloc.c(GC_free): Ignore bad frees on MSWIN32 with REDIRECT_MALLOC.
	* NT_MAKEFILE: msvc_dbg.h is in include/private.  Don't use cvars
	rc.
	* misc.c (WIN32 GC_write): Define GC_need_to_lock in single-threaded
	case.
	* win32_threads.c: Test for __MINGW32__ in addition to _MINGW_VER.
	(GC_CreateThread, GC_beginthreadex): Deallocate args even if we fail.
	* include/gc.h: Add GC_reachable_here().  (GC_WinMain): Add GC_API.
	(GC_beginthreadex, GC_endthreadex, GC_ExitThread): Declare.
	* tests/test.c: Add GC_reachable_here() call.

2007-05-21  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_try_to_collect): Call GC_init if necessary.
	* tests/thread_leak_test.c: Don't unconditionally define
	GC_LINUX_THREADS.

2007-05-21  Andreas Tobler  <a.tobler@schweiz.org>
